turned off use of mmap flag

--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -1,5 +1,6 @@
 if ENABLE_MMAP
 MMAP_FLAGS = -DENABLE_MMAP
+# do not add -DENABLE_MMAP to libldms_la_CFLAGS until code fixed.
 endif
 
 lib_LTLIBRARIES =
@@ -10,7 +11,7 @@ ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h 
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
-libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ $(MMAP_FLAGS)
+libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc -lcoll
 lib_LTLIBRARIES += libldms.la
