--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -23,7 +23,7 @@ AC_C_FLEXIBLE_ARRAY_MEMBER
 
 OPTION_DEFAULT_ENABLE([core], [ENABLE_CORE])
 OPTION_DEFAULT_ENABLE([papi], [ENABLE_PAPI])
-OPTION_DEFAULT_ENABLE([mmap], [ENABLE_MMAP])
+OPTION_DEFAULT_DISABLE([mmap], [ENABLE_MMAP])
 OPTION_DEFAULT_ENABLE([perf], [ENABLE_PERF])
 OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
 OPTION_DEFAULT_ENABLE([glib], [ENABLE_GLIB])
