Added a generic object store dump utility called sos_query
Also fixed:
- whitespace abuse encountered along the way
- added missing check for an index when building iterators on object attributes
-  removed extra check for -1 when MAP_FAILED (-1) is already checked.

Change-Id: I50d4c785424be3d9e175a9c24446fff649d3b933
Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -4,6 +4,7 @@ sbin_PROGRAMS = \
 	sos \
 	sos_rate \
 	sos_stat \
+	sos_query \
 	oidx \
 	oidx_dump \
 	ods_dump \
@@ -86,6 +87,13 @@ sos_rate_LDADD = \
 
 sos_stat_SOURCES = sos_stat.c
 sos_stat_LDADD = \
+	libsos.la \
+	liboidx.la \
+	libods.la \
+	-lcoll
+
+sos_query_SOURCES = sos_query.c
+sos_query_LDADD = \
 	libsos.la \
 	liboidx.la \
 	libods.la \
