magic removal, de-brittling, and authentication.
specifically:
- hardwiring /usr/local/lib has been replaced with automake libdir convention
for plugins location. This should lead to fewer heisenbugs and surprises.

- added --enable-authentication switch and supporting C code (which is buggy).

- applied xmacro technique to keep all ldms_cmd enum dependent code in sync as
the protocol evolves. Enables removal of cmd_strings array in ldms_rdma.c.
See ldms/src/core/ldms_xprt.h for new ldms_request_cmd_names and sizeof_ldms_request_cmd_names interface.

- deprecated some unused code that if revived gives unauthenticated
ldmsctl capability.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -29,6 +29,7 @@ OPTION_DEFAULT_ENABLE([perf], [ENABLE_PERF])
 OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
 OPTION_DEFAULT_ENABLE([glib], [ENABLE_GLIB])
 OPTION_DEFAULT_DISABLE([yaml], [ENABLE_YAML])
+OPTION_DEFAULT_DISABLE([authentication], [ENABLE_AUTHENTICATION])
 
 dnl Options for transport
 OPTION_DEFAULT_ENABLE([xprt], [ENABLE_XPRT])
@@ -250,6 +251,11 @@ LIBS=""
 if test -z "$ENABLE_QC_SAMPLER_TRUE"
 then
 AC_DEFINE([HAVE_QC_SAMPLER],[1],[Turning on QC tests for samplers.])
+fi
+
+if test -z "$ENABLE_AUTHENTICATION_TRUE"
+then
+AC_DEFINE([HAVE_AUTH],[1],[Turning on authentication checks for xprt connect.])
 fi
 
 OPTION_WITH_PORT([LDMSD],[411])
