--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -6,11 +6,12 @@ endif
 lib_LTLIBRARIES =
 
 AM_CFLAGS = -Wall $(DBGFLAGS) -I$(top_srcdir)
+AM_CPPFLAGS = -DSYSCONFDIR='"$(sysconfdir)"' -DPLUGINDIR='"$(libdir)"'
 
 ldmscoreincludedir = $(includedir)/ldms
-ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h 
+ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h ldms_auth.h ldms_xprt_cmd.h
 
-libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
+libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h ldms_auth.c
 libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc -lcoll
