me: models: Add models
 - model_above_mean: detect values that exceed the given mean by the threshold x the given sd.
 - model_below_mean: detect values that exceed the given mean by the threshold x the given sd.

Change-Id: If3bc6ead410b751721cb8dcd46dfee228380cb82

--- a/me/configure.ac
+++ b/me/configure.ac
@@ -36,6 +36,8 @@ OPTION_DEFAULT_DISABLE([high_outlier], [ENABLE_HIGH_OUTLIER])
 OPTION_DEFAULT_DISABLE([high_exact], [ENABLE_HIGH_EXACT])
 OPTION_DEFAULT_DISABLE([low_exact], [ENABLE_LOW_EXACT])
 OPTION_DEFAULT_DISABLE([low_outlier], [ENABLE_LOW_OUTLIER])
+OPTION_DEFAULT_ENABLE([above_mean], [ENABLE_ABOVE_MEAN])
+OPTION_DEFAULT_ENABLE([below_mean], [ENABLE_BELOW_MEAN])
 
 dnl Options for stores
 OPTION_DEFAULT_ENABLE([stores], [ENABLE_STORES])
