ldmsd: store: Add store_tahoma_sos
 - store_tahoma_sos is a store modified from store_sos that interprets the udata
   as metric_id of which the first 32 bits are for comp ID and the other are for
   the metric_type_id. The store_tahoma_sos splits and stores the udata into two
   columns: comp IDs and metric type IDs.
 - store_sos.c is modified to avoid any name collapsing.

Change-Id: Ic106bbdf4bf52d2119820fb7636b08bb6bafaa6e

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -42,6 +42,10 @@ OPTION_DEFAULT_DISABLE([mysqlbulk], [ENABLE_MYSQLBULK])
 OPTION_DEFAULT_ENABLE([flatfile], [ENABLE_FLATFILE])
 OPTION_DEFAULT_ENABLE([csv], [ENABLE_CSV])
 
+OPTION_DEFAULT_DISABLE([tahoma_sos], [ENABLE_TAHOMA_SOS])
+OPTION_DEFAULT_DISABLE([sos], [ENABLE_SOS])
+OPTION_WITH([sos], [SOS])
+
 dnl Options for consumer
 OPTION_DEFAULT_DISABLE([me], [ENABLE_ME])
 OPTION_WITH([me], [ME])
@@ -77,9 +81,6 @@ OPTION_DEFAULT_DISABLE([krca], [ENABLE_KRCA])
 OPTION_WITH([krca], [KRCA])
 OPTION_DEFAULT_DISABLE([cray-hss-devel], [ENABLE_CRAY_HSS_DEVEL])
 OPTION_WITH([cray-hss-devel], [CRAY_HSS_DEVEL])
-
-OPTION_DEFAULT_DISABLE([sos], [ENABLE_SOS])
-OPTION_WITH([sos], [SOS])
 
 OPTION_DEFAULT_ENABLE([ovis-lib], [ENABLE_OVIS_LIB])
 OPTION_WITH([ovis-lib], [OVIS_LIB])
