komondor: Add store plugin capibility.
New komondor store features:
* Pluggable
* Support event status update
* The default store assumes that 64-bit metric_id is [comp_id|metric_type_id].

Change-Id: I55ed3aff0e2571f3b8ecde65b2e3e2483787bc5c

--- a/komondor/configure.ac
+++ b/komondor/configure.ac
@@ -59,6 +59,7 @@ AC_SUBST(ac_configure_args)
 AC_CONFIG_FILES([Makefile
 		 src/Makefile
 		 src/test/Makefile
+		 src/store/Makefile
 		 ])
 AC_OUTPUT
 
