--- a/komondor/src/Makefile.am
+++ b/komondor/src/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = test
+SUBDIRS = . store test
 
 AM_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ @SOS_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@ \
@@ -7,7 +7,7 @@ AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@ \
 sbin_PROGRAMS = komondor
 
 komondor_SOURCES = komondor.c
-komondor_LDADD = -lcoll -lzap -lpthread -lsos
+komondor_LDADD = -lcoll -lzap -lpthread -lsos -lovis_util -ldl
 
 if ENABLE_OCM
 komondor_CFLAGS = $(AM_CFLAGS) -DENABLE_OCM @OCM_INCDIR_FLAG@
