lib: swig support for zap (only connect and send)
This change add zap-python support (using swig). However, the ability to
implement C-callback function in Python/SWIG is likely to be unsupported, the
following convenient functions are implemented to aid zap operation from python
side:
 - zap_GET: to get zap engine handle
 - zap_NEW: to create zap endpoint
 - zap_connect_ez: to easily connect (blocking) to another endpoint

Semaphore has been added into the endpoint make zap_connect_ez blocking.
This change only implements the support for create, connect and send. Receive,
read and write are not yet supported.

Automake scripts to support swig and python are also added to the top m4/
directory. The python module directory is named ovis_lib instead of "ovis-lib"
to comply with python naming rules.

Change-Id: Ia2fda0606a676696b3880dc4a89667a002816028

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src
+SUBDIRS = src swig
 EXTRA_DIST = autogen.sh COPYRIGHT doxygen/html
 
 OVIS_LIB = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
