lib: zap Makefile.am fix
Add pthread library into zap's dependencies.

Change-Id: I53e4947cb140a800cad991ad473748d716626b3b

--- a/lib/src/zap/Makefile.am
+++ b/lib/src/zap/Makefile.am
@@ -13,7 +13,7 @@ SUBDIRS += test
 endif
 
 libzap_la_SOURCES = zap.c zap_priv.h
-libzap_la_LIBADD = -ldl
+libzap_la_LIBADD = -ldl -lpthread
 libzapincludedir = $(includedir)/zap
 libzapinclude_HEADERS = zap.h
 
