lib: Fix configure.ac and Makefile.am
 - Fix the problem that configure always check for the rdma libraries
 - Fix the problem that make always build the swig/ folder

Change-Id: I82acaa79b268d688127d525e1fbeb29a1a087bb4

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src swig
+SUBDIRS = src
+if ENABLE_SWIG
+SUBDIRS += swig
+endif
+
 EXTRA_DIST = autogen.sh COPYRIGHT doxygen/html
 
 OVIS_LIB = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
