me: Make default options of models to enable
Change-Id: I19ff6a6a52c551bdda307543c2bf8fc08e58e33c

--- a/me/configure.ac
+++ b/me/configure.ac
@@ -30,12 +30,12 @@ OPTION_DEFAULT_ENABLE([me], [ENABLE_ME])
 dnl Options for models
 OPTION_DEFAULT_ENABLE([models], [ENABLE_MODELS])
 OPTION_DEFAULT_ENABLE([model_example], [ENABLE_MODEL_EXAMPLE])
-OPTION_DEFAULT_DISABLE([bkde], [ENABLE_BKDE])
-OPTION_DEFAULT_DISABLE([baler_rules], [ENABLE_BALER_RULES])
-OPTION_DEFAULT_DISABLE([high_outlier], [ENABLE_HIGH_OUTLIER])
-OPTION_DEFAULT_DISABLE([high_exact], [ENABLE_HIGH_EXACT])
-OPTION_DEFAULT_DISABLE([low_exact], [ENABLE_LOW_EXACT])
-OPTION_DEFAULT_DISABLE([low_outlier], [ENABLE_LOW_OUTLIER])
+OPTION_DEFAULT_ENABLE([bkde], [ENABLE_BKDE])
+OPTION_DEFAULT_ENABLE([baler_rules], [ENABLE_BALER_RULES])
+OPTION_DEFAULT_ENABLE([high_outlier], [ENABLE_HIGH_OUTLIER])
+OPTION_DEFAULT_ENABLE([high_exact], [ENABLE_HIGH_EXACT])
+OPTION_DEFAULT_ENABLE([low_exact], [ENABLE_LOW_EXACT])
+OPTION_DEFAULT_ENABLE([low_outlier], [ENABLE_LOW_OUTLIER])
 OPTION_DEFAULT_ENABLE([above_mean], [ENABLE_ABOVE_MEAN])
 OPTION_DEFAULT_ENABLE([below_mean], [ENABLE_BELOW_MEAN])
 
