lib: zap_sock, make unmapped memroy remotely inaccessible
zap_sock had never check for wrongly access in unmapped memory. This change will
address that issue.

In addition, this change also add ctxt in zap_share (both rdma and sock).

Change-Id: I46d9611b27a3440d2a76c0f6d7f8ddb4257bd08f

--- a/lib/src/zap/sock/Makefile.am
+++ b/lib/src/zap/sock/Makefile.am
@@ -1,8 +1,8 @@
 lib_LTLIBRARIES = libzap_sock.la
 
-AM_CFLAGS = -I$(srcdir)/../
+AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)/src
 
 libzap_sock_la_SOURCES = zap_sock.c zap_sock.h
 libzap_sock_la_CFLAGS = $(AM_CFLAGS) @EVENTINC@
-libzap_sock_la_LIBADD = @EVENTLIBS@ ../libzap.la
+libzap_sock_la_LIBADD = @EVENTLIBS@ ../libzap.la ../..//coll/libcoll.la
 libzap_sock_la_LDFLAGS = $(AM_LDFLAGS) -pthread
