baler: Addressing installation error on Mint16
Change-Id: I53d6cdb90ef4fc25207dec8c04f3a9a5a106eb24

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -4,9 +4,9 @@
 
 AC_PREREQ([2.63])
 AC_INIT([baler], 2.0, narate@ogc.us)
-AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
-LT_INIT()
+AM_INIT_AUTOMAKE
+LT_INIT
 
 AC_PROG_CC()
 AC_PROG_CXX()
