sos: fix python package name
Automake uses project name as a default package name. This change makes
swig-python package name for sos being 'libsos', instead of 'ovis-sos' which is
bad for python.

Change-Id: I0678ef8bd61e28d3e65e3c84d9468812cc39e164

--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -28,6 +28,8 @@ then
 AM_PATH_PYTHON(2.6)
 AC_PROG_SWIG
 SWIG_PYTHON
+pkgpythondir="${pythondir}/libsos"
+pkgpyexecdir="${pkgpythondir}"
 fi
 
 dnl Check host byte order
