--- a/me/configure.ac
+++ b/me/configure.ac
@@ -38,6 +38,9 @@ OPTION_DEFAULT_ENABLE([low_exact], [ENABLE_LOW_EXACT])
 OPTION_DEFAULT_ENABLE([low_outlier], [ENABLE_LOW_OUTLIER])
 OPTION_DEFAULT_ENABLE([above_mean], [ENABLE_ABOVE_MEAN])
 OPTION_DEFAULT_ENABLE([below_mean], [ENABLE_BELOW_MEAN])
+OPTION_DEFAULT_ENABLE([high_percentage], [ENABLE_HIGH_PERCENTAGE])
+OPTION_DEFAULT_ENABLE([low_percentage], [ENABLE_LOW_PERCENTAGE])
+OPTION_DEFAULT_ENABLE([detect_input_type], [ENABLE_DETECT_INPUT_TYPE])
 
 dnl Options for stores
 OPTION_DEFAULT_ENABLE([stores], [ENABLE_STORES])
