ldms: hadoop sampler: Modifed the hadoop sampler
 - sampler/hadoop is for Hadoop 1.2.
 	- Added the secondarynamenode sampler
	- Users need to give the path to the file that contains the metric names
	  and their types of a Hadoop daemon

Change-Id: I5af0f463b5b1c61238a340dfe70a8ca1ada0855d

--- a/ldms/src/sampler/hadoop/Makefile.am
+++ b/ldms/src/sampler/hadoop/Makefile.am
@@ -41,3 +41,8 @@ lib_LTLIBRARIES += libhadoop_maptask.la
 libhadoop_reducetask_la_SOURCES = hadoop_reducetask.c
 libhadoop_reducetask_la_LIBADD = $(COMMON_ADD)
 lib_LTLIBRARIES += libhadoop_reducetask.la
+
+#hadoop_secondarynamenode
+libhadoop_secondarynamenode_la_SOURCES = hadoop_secondarynamenode.c
+libhadoop_secondarynamenode_la_LIBADD = $(COMMON_ADD)
+lib_LTLIBRARIES += libhadoop_secondarynamenode.la
