ldms: hadoop sampler: hadoop sampler and Sinks for Hadoop 2.2
 - Added the samplers hadoop_resourcemanager and hadoop_nodemanager
 - Added README to explain the different between hadoop-sinks and hadoop-2-sinks
 - Added hadoop-2-sinks
 	- the Java code of the OVIS Sinks that are compatible with Hadoop 2.2.

Change-Id: I18ad0c6f5e731ae7a544d0f0e674915880f8f7d0

--- a/ldms/src/sampler/hadoop/Makefile.am
+++ b/ldms/src/sampler/hadoop/Makefile.am
@@ -46,3 +46,13 @@ lib_LTLIBRARIES += libhadoop_reducetask.la
 libhadoop_secondarynamenode_la_SOURCES = hadoop_secondarynamenode.c
 libhadoop_secondarynamenode_la_LIBADD = $(COMMON_ADD)
 lib_LTLIBRARIES += libhadoop_secondarynamenode.la
+
+#hadoop_resourcemanager
+libhadoop_resourcemanager_la_SOURCES = hadoop_resourcemanager.c
+libhadoop_resourcemanager_la_LIBADD = $(COMMON_ADD)
+lib_LTLIBRARIES += libhadoop_resourcemanager.la
+
+#hadoop_nodemanager
+libhadoop_nodemanager_la_SOURCES = hadoop_nodemanager.c
+libhadoop_nodemanager_la_LIBADD = $(COMMON_ADD)
+lib_LTLIBRARIES += libhadoop_nodemanager.la
