me: model: Added the model_severity_level
 - The model evaluates the metrics of which the values are severity levels. The
   model matches up a received value with given thresholds and reports an event
   with the severity level of the matched threshold. Otherwise, the model
   reports a nominal event.

Change-Id: I523e44ffb7ced179d86717dca9b9e2badfe6452c

--- a/me/configure.ac
+++ b/me/configure.ac
@@ -41,6 +41,7 @@ OPTION_DEFAULT_ENABLE([below_mean], [ENABLE_BELOW_MEAN])
 OPTION_DEFAULT_ENABLE([high_percentage], [ENABLE_HIGH_PERCENTAGE])
 OPTION_DEFAULT_ENABLE([low_percentage], [ENABLE_LOW_PERCENTAGE])
 OPTION_DEFAULT_ENABLE([detect_input_type], [ENABLE_DETECT_INPUT_TYPE])
+OPTION_DEFAULT_ENABLE([severity_level], [ENABLE_SEVERITY_LEVEL])
 
 dnl Options for stores
 OPTION_DEFAULT_ENABLE([stores], [ENABLE_STORES])
