ldms: sysclassib using MAD message to query perofrmance counter.
New implementation of sysclassib, using MAD messages to perform performance
counter and counter reset. The sampler also check whether each of the given
ports supports extended performance counters. If so, it will not reset the
counters, but query the extended counters in addition to regular counters. In
the case that the port does not support extended performance counter, the
sampler will send a reset MAD message after each counter query.

Change-Id: Ifca760b5443ad27bb22b22cd12cd392ec32759dd

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -80,7 +80,7 @@ endif
 
 if ENABLE_SYSCLASSIB
 libsysclassib_la_SOURCES = sysclassib.c
-libsysclassib_la_LIBADD = $(COMMON_LIBADD)
+libsysclassib_la_LIBADD = $(COMMON_LIBADD) -libmad -libumad
 lib_LTLIBRARIES += libsysclassib.la
 endif
 
