komondor: Python interface (also CLI) to send an event to komondor.
This change introduce komondor python package. The komondor.py inside the
package can also be called from the command line to send an event to Komondor.
The installation rule has been made so that a soft-link to komondor.py will be
created in PREFIX/sbin.

Change-Id: Id3cc509ef3524c88ee4dfd42b28e996f45573f9c

--- a/komondor/configure.ac
+++ b/komondor/configure.ac
@@ -8,6 +8,8 @@ AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE([-Wno-portability])
 AM_PROG_LIBTOOL
 
+AM_PATH_PYTHON(2.6)
+
 dnl Other libraries
 
 AM_CONDITIONAL([ENABLE_OVIS_LIB], [true])
@@ -60,6 +62,8 @@ AC_CONFIG_FILES([Makefile
 		 src/Makefile
 		 src/test/Makefile
 		 src/store/Makefile
+		 python/Makefile
+		 python/komondor/Makefile
 		 ])
 AC_OUTPUT
 
