All: Adding starup scripts for all deamons.
Adding rc-style start up scripts for all deamons. The scripts live in
OVIS/*/etc/init.d/. They will get processed by autoconf to have proper
default paths. They will get installed in @prefix@/etc/init.d, then
symlinked into /etc/init.d/.

Also there is a file with variabes to be sourced by each start up
script. That script will live in OVIS/lib/etc/ovis/. It will get
processed by autoconf to have proper paths. It will get installed in
@prefix@/etc/profile.d then get symlinked into /etc/profile.d.

Change-Id: I19e3072e6b551e42bea2dc4e643f00cd33088e5d

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -67,7 +67,7 @@ AM_COND_IF([HAVE_DOXYGEN], [AC_CONFIG_FILES([docs/Doxyfile])])
 AC_CONFIG_FILES(Makefile docs/Makefile src/Makefile
 	scripts/Makefile src/baler/Makefile src/plugins/Makefile
 	src/query/Makefile src/test/Makefile
-	src/plugins/test/Makefile swig/Makefile
+	src/plugins/test/Makefile swig/Makefile etc/Makefile
 )
 
-AC_OUTPUT
+AC_OUTPUT(etc/init.d/balerd)
